added menu items with style

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -12,7 +13,12 @@
               <div class="logo">
                 <img class="logo photo" src="../CS Website/images/logo-dark.png" alt="geekfolio">
               </div>
-                
+               <div class="menu-item">
+                <li>Home 1</li>
+                <li>Home 2</li>
+                <li>Home 3</li>
+                <li>Home 4</li>
+               </div> 
             </div>
         </nav>
     </header>
